# caravanOS

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.devcontainer/: Dockerfile  devcontainer.json
apps/hello_linux/: CMakeLists.txt  main.cpp
cmake/: UnifiedComponent.cmake
core/: CMakeLists.txt  metric.cpp  metric_bus.cpp
core/include/core/: device_base.hpp  enum_hash.hpp  enums.h  ids.h  metric.h  metric_bus.h  spec_policy.h
devices/: CMakeLists.txt  tilt_wt901c.cpp
devices/include/: tilt_wt901c.h
docs/: COMMUNICATION_SPEC.md
hal/: CMakeLists.txt
hal/include/: clock.h  modbus.h
tests/core/: CMakeLists.txt  policy_compiletime_checks.cpp  test_device_base.cpp  test_metric.cpp  test_metric_bus.cpp
tests/devices/: CMakeLists.txt  test_wt901c.cpp
